--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "revolution/laravel-google-sheets": "^6.4",
         "stevebauman/location": "^7.5"
     },
     "require-dev": {
